testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/InterfaceTest1.adl
CONTEXT InterfaceTest1 IN ENGLISH

  INTERFACE Identifier : I[BusinessActor]
   BOX[ name : name~ ]

PATTERN Business
RELATION name[BusinessActor*Identifier] [UNI]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script tests the mechanism of matching the source of an interface field to the target of the interface term.
   Result: PASS
-}